<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZooAnimals</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_start">Welcome to our Local Zoo!</string>
    <string name="button_start">See our animals!</string>
    <string name="text_brown_bear_description">It is a big animal with either lighter or darker brown fur. Tail is short and not well seen among its fur. Bears walk like humans do on their soles.</string>
    <string name="text_brwon_bear_habitat">Brown bears can be found in many habitats, from the fringes of deserts to high mountain forests and ice fields.</string>
    <string name="text_habitat">Habitat</string>
    <string name="text_description">Description</string>
    <string name="text_brown_bear">Brown Bear</string>
    <string name="button_next_animal">Next animal</string>
    <string name="button_show_description">Description</string>
    <string name="text_grizzly_bear">Grizzly Bear</string>
    <string name="text_grizzly_bear_description">Grizzly bears are majestic symbols of the wild. Bears live in and use a variety of habitat types, playing important roles in each one.</string>
    <string name="text_grizzly_bear_habitat">Grizzly bears are found many different habitats, from dense forests to subalpine meadows, open plains and arctic tundra. In North America, grizzly bears are found in western Canada, Alaska, Wyoming, Montana, Idaho</string>
    <string name="text_wombat">Wombat</string>
    <string name="text_wombat_description">Wombats are thick-bodied animals that have short, powerful legs with strong claws used for burrowing. They range in length from 70 to 120 cm (27-47 in) and weigh up to 35 kg (77 lb).</string>
    <string name="text_wombat_habitat">They are native to the eastern half of Australia and to the island of Tasmania south of Australia.</string>
    <string name="text_gecko">Gecko</string>
    <string name="text_gecko_description">Geckos are a wide-ranging group of reptiles. Some of them are slender-bodied, while others are more robust. The size range between the smallest and largest gecko species is noticeable.</string>
    <string name="text_gecko_habitat">The gecko is a small to medium species of lizard that is found in the more temperate and tropical regions of the world.</string>
    <string name="text_coral_snake">Coral Snake</string>
    <string name="text_coral_snake_description">This iconic snake, with its bulbous head and red, yellow, and black bands, is famous for its potent venom.</string>
    <string name="text_coral_snake_habitat">They live in the wooded, sandy, and marshy areas of the southeastern United States, and spend most of their lives burrowed underground or in leaf piles.</string>
    <string name="text_tortoise">Tortoise</string>
    <string name="text_tortoise_description">Tortoises are a family, of land-dwelling turtles in the order Testudines. Contrary to popular belief, tortoises are in fact turtles rather than part of a separate group.</string>
    <string name="text_tortoise_habitat">Sandy soil close to water</string>

</resources>
